[package]
name = "swarm-p2p-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
libp2p = { version = "0.56.0", features = [
    "kad",
    "mdns",
    "noise",
    "quic",
    "tcp",
    "tokio",
    "yamux",
    "identify",
    "ping",
    "relay",
    "gossipsub",
    "dcutr",
    "autonat",
    "macros",
    "request-response",
    "serde",
    "cbor"
] }
# libp2p-stream 仍是 alpha，未纳入 libp2p 0.56 stable facade 的 feature，
# 需作为独立 crate 直接依赖（与 libp2p 0.56 同期，对齐 libp2p-swarm 0.47.x）。
libp2p-stream = "0.4.0-alpha"
tokio = { version = "1.49.0", features = ["macros", "sync", "rt"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1.44"
parking_lot = "0.12.5"
async-trait = "0.1.89"
dashmap = "6.1.0"

[features]
default = ["client"]
client = []
server = []
dns = ["libp2p/dns"]

[dev-dependencies]
# 测试用 #[tokio::test(flavor = "multi_thread")] + timeout，
# 显式声明这些 feature，避免仅靠 workspace feature unification（单独构建 core 时会缺）。
tokio = { version = "1.49.0", features = ["macros", "sync", "rt", "rt-multi-thread", "time"] }
